--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="smkn2.css">
     <title>Portal | SMKN 2 SURABAYA</title>
-     <link rel="icon" type="image/png" href="logo-smkn-2-sby-removebg-preview.png">
+    <link rel="icon" type="image/png" href="logo-smkn-2-sby-removebg-preview.png">
 </head>
+    <script src="main.js"></script>
 <body>
     <nav>
         <img class="imglogo" src="logo-smkn-2-sby-removebg-preview.png">
@@ -15,7 +16,7 @@
     <div class="header">
         <div class="subheader">
             <a href="https://web.smkn2sby.sch.id/">
-                WEB <br class="br">UTAMA <br>
+                Web <br class="br">Utama <br>
                 <p class="text">Halaman Web Utama <br>SMKN 2 Surabaya</p>
                 <img src="home.png" class="home" alt="Home Icon">
             </a>
@@ -24,49 +25,49 @@
             <a href="">
                 SIAKAD <br>SMEKDA <br>
                 <p class="text">Sistem Informasi <br>Akademik <br>SMKN 2 <br>Surabaya</p>
-                <img src="portal.png" class="portal">
+                <img src="portal.png" class="portal" alt="Portal Icon">
             </a>
         </div>
         <div class="subheader">
             <a href="https://elearning.smkn2sby.sch.id/login/index.php">
-                E-LEARNING <br>SMEKDA
+                E-Learning <br>SMEKDA
                 <p class="text">Learning Management <br>System SMKN 2 <br>Surabaya</p>
-                <img src="elearning.png" class="elearning">
+                <img src="elearning.png" class="elearning" alt="E-Learning Icon">
             </a>
         </div>
         <div class="subheader">
             <a href="https://bkk.smkn2sby.sch.id/">
                 BKK <br>SMEKDA
                 <p class="text">Bursa Kerja Khusus <br>SMKN 2 Surabaya</p>
-                <img src="bkk.png" class="bkk">
+                <img src="bkk.png" class="bkk" alt="BKK Icon">
             </a>
         </div>
         <div class="subheader">
             <a href="https://pkl.smkn2sby.sch.id/">
                 e-PKL
                 <p class="text">Praktek Kerja <br>Lapangan SMKN 2 <br>Surabaya</p>
-                <img src="admin.png" class="e-pkl">
+                <img src="admin.png" class="e-pkl" alt="e-PKL">
             </a>
         </div>
         <div class="subheader">
             <a href="https://presensi.smkn2sby.sch.id/">
                 e-Presensi
                 <p class="text">Aplikasi Kehadiran <br>SMKN 2 Surabaya</p>
-                <img src="ppdb.png" class="e-presensi">
+                <img src="ppdb.png" class="e-presensi" alt="e-Presensi">
             </a>
         </div>
         <div class="subheader">
             <a href="https://pustaka.smkn2sby.sch.id/">
                 e-Library
                 <p class="text">Aplikasi <br>Perpustakaan SMKN <br>2 Surabaya</p>
-                <img src="logo.png" class="e-library">
+                <img src="logo.png" class="e-library" alt="e-Library">
             </a>
         </div>
         <div class="subheader">
             <a href="https://pas.smkn2sby.sch.id/exam">
                 CBT <br>SMEKDA
                 <p class="text">Ujian Berbasis <br>Komputer SMKN 2 <br>Surabaya</p>
-                <img src="cbt.png" class="cbt">
+                <img src="cbt.png" class="cbt" alt="CBT SMEKDA">
             </a>
         </div>
     </div>
